3.2.0 (Next 3.x Release)
------------------------

- "supervisorctl start [spec naming lots of processes]" and "supervisorctl stop
  [spec naming lots of processes]" both now complete much more quickly.  See
  https://github.com/Supervisor/supervisor/issues/131 .

- Environment variables are now expanded for all config file options.
  Patch by Dexter Tad-y.

3.1.3 (2014-10-28)
------------------

- Fixed an XML-RPC bug where the ElementTree-based parser handled strings
  like ``<value><string>hello</string></value>`` but not strings like
  ``<value>hello</value>``, which are valid in the XML-RPC spec.  This
  fixes compatibility with the Apache XML-RPC client for Java and
  possibly other clients.

3.1.2 (2014-09-07)
------------------

- Fixed a bug where ``tail group:*`` in ``supervisorctl`` would show a 500
  Internal Server Error rather than a BAD_NAME fault.

- Fixed a bug where the web interface would show a 500 Internal Server Error
  instead of an error message for some process start faults.

- Removed medusa files not used by Supervisor.

3.1.1 (2014-08-11)
------------------

- Fixed a bug where ``supervisorctl tail -f name`` output would stop if log
  rotation occurred while tailing.

- Prevent a crash when a greater number file descriptors were attempted to be
  opened than permitted by the environment when starting a bunch of programs.
  Now, instead a spawn error is logged.

- Compute "channel delay" properly, fixing symptoms where a supervisorctl start
  command would hang for a very long time when a process (or many processes)
  are spewing to their stdout or stderr.  See comments attached to
  https://github.com/Supervisor/supervisor/pull/263 .

- Added docs/conf.py, docs/Makefile, and supervisor/scripts/*.py to
  the release package.

3.1.0 (2014-07-29)
------------------

- The output of the ``start``, ``stop``, ``restart``, and ``clear`` commands
  in ``supervisorctl`` has been changed to be consistent with the ``status``