@@ -8,6 +8,9 @@
 - Environment variables are now expanded for all config file options.
   Patch by Dexter Tad-y.
 
+- Errors caused by bad values in a config file now show the config section
+  to make debugging easier.  Patch by Marc Abramowitz.
+
 3.1.3 (2014-10-28)
 ------------------
 
